syntax = "proto3";

package user;

option go_package = "proto/user";

service UserService {
  rpc GetAddressByID(AddressRequest) returns (AddressResponse);
}

message AddressRequest {
  string address_id = 1;
}

message AddressResponse {
  string id = 1;
  string name = 2;
  string address = 3;
  string city = 4;
  string province = 5;
  string zipcode = 6;
  string phone = 7;
}
